--- a/lab3_form.html
+++ b/lab3_form.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Lanjutan</title>
     <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Lanjutan</title>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Lanjutan</title>
-    <style>
-        form p > label {
-        display: inline-block;
-        width: 100px;
-        }
-        form input[type="text"], form textarea {
-        border: 1px solid #e21212;
-        }
-        form input[type="submit"] {
-        border: 1px solid #1fff80;
-        background-color: #197a43;
-        color: #ffffff;
-        font-weight: bold;
-        padding: 5px 15px;
-        }
-        </style>
-</head>
-<body>
-    <header>
-        <h1>Membuat Form</h1>
-    </header>
-    <form action="proses.php">
-        <fieldset>
-            <legend>Data Pelanggan</legend>
-            <p>
-                <label for="nama">Nama</label>
-                <input type="text" id="nama" name="nama">
-            </p>
-            <p>
-                <label for="alamat">Alamat</label>
-                <textarea name="alamat" id="alamat" cols="20" rows="3"></textarea>
-            </p>
-            <p>
-                <label for="jenis kelamin">Jenis Kelamin</label>
-                <input type="radio" name="jk_l" id="jk_l" value="L">
-                <label for="jk_l">Laki-Laki</label>
-                <input type="radio" name="kelamin" id="jk_p">
-                <label for="jk_P">Perempuan</label>
-            </p>
-            <p><input type="submit" value="Login"></p>
-        </fieldset>
-    </form>
-</body>
-</html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>HTML Lanjutan</title>
+        <!DOCTYPE html>
+        <html lang="en">
+
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>HTML Lanjutan</title>
+            <style>
+                form p>label {
+                    display: inline-block;
+                    width: 100px;
+                }
+
+                form input[type="text"],
+                form textarea {
+                    border: 1px solid #e21212;
+                }
+
+                form input[type="submit"] {
+                    border: 1px solid #1fff80;
+                    background-color: #197a43;
+                    color: #ffffff;
+                    font-weight: bold;
+                    padding: 5px 15px;
+                }
+            </style>
+        </head>
+
+    <body>
+        <header>
+            <h1>Membuat Form</h1>
+        </header>
+        <form action="proses.php">
+            <fieldset>
+                <legend>Data Pelanggan</legend>
+                <p>
+                    <label for="nama">Nama</label>
+                    <input type="text" id="nama" name="nama">
+                </p>
+                <p>
+                    <label for="alamat">Alamat</label>
+                    <textarea name="alamat" id="alamat" cols="20" rows="3"></textarea>
+                </p>
+                <p>
+                    <label for="jenis kelamin">Jenis Kelamin</label>
+                    <input type="radio" name="jk_l" id="jk_l" value="L">
+                    <label for="jk_l">Laki-Laki</label>
+                    <input type="radio" name="kelamin" id="jk_p">
+                    <label for="jk_P">Perempuan</label>
+                </p>
+                <p><input type="submit" value="Login"></p>
+
+            </fieldset>
+        </form>
+    </body>
+
+    </html>
